	PR c/37481 	* c-typeck.c (digest_init): Check for initializing an array with a 	string literal.

testsuite:
	* gcc.dg/c99-flex-array-7.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146359 138bc75d-0d04-0410-961f-82ee72b054a4